@@ -1,3 +1,9 @@
+2005-02-11  Sushma Rai  <rsushma@novell.com>
+
+	* storage/exchange-config-listener.c (account_changed): Removing the 
+	esources for the account before asking for restart, if owa url is 
+	modified. Fixes #71995.
+
 2005-02-10  Sushma Rai  <rsushma@novell.com>
 
 	* lib/e2k-autoconfig.c (validate): Changed the support URL value.
